--- a/G.ipynb
+++ b/G.ipynb
@@ -6,7 +6,7 @@
       "name": "G.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPt11Of0q+EzmwIMvQ05iwq"
+      "authorship_tag": "ABX9TyOouN3Q9zBSudT2OOdhnD6v"
     },
     "kernelspec": {
       "name": "python3",
@@ -9156,6 +9156,16 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Doubt Session:\n",
+        "# 1. How to Adjust the Inflation Rate in Sales_Price column?"
+      ],
+      "metadata": {
+        "id": "2aDK7M7vmhX_"
+      }
     },
     {
       "cell_type": "markdown",
