--- a/G.ipynb
+++ b/G.ipynb
@@ -6,7 +6,7 @@
       "name": "G.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOouN3Q9zBSudT2OOdhnD6v"
+      "authorship_tag": "ABX9TyN4F7/UU3FuoJjftU0lLcoN"
     },
     "kernelspec": {
       "name": "python3",
@@ -9161,7 +9161,7 @@
       "cell_type": "markdown",
       "source": [
         "# Doubt Session:\n",
-        "# 1. How to Adjust the Inflation Rate in Sales_Price column?"
+        "# 1. How to Adjust the Inflation Rate of 5% in Sales_Price column?"
       ],
       "metadata": {
         "id": "2aDK7M7vmhX_"
