--- a/G.ipynb
+++ b/G.ipynb
@@ -27,7 +27,6 @@
       "source": [
         "# **Name: Manikandan G**\n",
         "# **Batch: D10**\n",
-        "# **Mentor: Kousik Krishnan**\n",
         "# **Problem: Chennai House Price Predictions**"
       ]
     },
@@ -98,7 +97,7 @@
         "id": "tOLlP7LOmAri"
       },
       "source": [
-        "# **2. Excel to DataFrame Conversion**"
+        "# **2. CSV to DataFrame Conversion**"
       ]
     },
     {
@@ -11436,7 +11435,7 @@
       "collapsed_sections": [],
       "name": "G.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOI/5sZEAJKVDK0b3WlY/Tc",
+      "authorship_tag": "ABX9TyMtoDCeMKkx7Vo0k5PeEQpj",
       "include_colab_link": true
     },
     "kernelspec": {
